Restricting modal-restrict test to <=> or <> if value is null

--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -33,8 +33,8 @@
             <select name="{{ 'test' + $index }}" ng-model="restrict.test" class="form-control">
               <option value="&lt;=&gt;">is</option>
               <option value="&lt;&gt;">is not</option>
-              <option value="like">is like</option>
-              <option value="not like">is not like</option>
+              <option class="not-nullable" value="like">is like</option>
+              <option class="not-nullable" value="not like">is not like</option>
             </select>
           </div>
         </div>
@@ -76,10 +76,10 @@
             <select name="{{ 'test' + $index }}" ng-model="restrict.test" class="form-control">
               <option value="&lt;=&gt;">is</option>
               <option value="&lt;&gt;">is not</option>
-              <option value="&gt;">greater than</option>
-              <option value="&gt;=">greater or equal to</option>
-              <option value="&lt;">less than</option>
-              <option value="&lt;=">less or equal to</option>
+              <option class="not-nullable" value="&gt;">greater than</option>
+              <option class="not-nullable" value="&gt;=">greater or equal to</option>
+              <option class="not-nullable" value="&lt;">less than</option>
+              <option class="not-nullable" value="&lt;=">less or equal to</option>
             </select>
           </div>
         </div>
@@ -101,10 +101,10 @@
             <select name="{{ 'test' + $index }}" ng-model="restrict.test" class="form-control">
               <option value="&lt;=&gt;">is</option>
               <option value="&lt;&gt;">is not</option>
-              <option value="&gt;">greater than</option>
-              <option value="&gt;=">greater or equal to</option>
-              <option value="&lt;">less than</option>
-              <option value="&lt;=">less or equal to</option>
+              <option class="not-nullable" value="&gt;">greater than</option>
+              <option class="not-nullable" value="&gt;=">greater or equal to</option>
+              <option class="not-nullable" value="&lt;">less than</option>
+              <option class="not-nullable" value="&lt;=">less or equal to</option>
             </select>
           </div>
         </div>
@@ -126,10 +126,10 @@
             <select name="{{ 'test' + $index }}" ng-model="restrict.test" class="form-control">
               <option value="&lt;=&gt;">is</option>
               <option value="&lt;&gt;">is not</option>
-              <option value="&gt;">greater than</option>
-              <option value="&gt;=">greater or equal to</option>
-              <option value="&lt;">less than</option>
-              <option value="&lt;=">less or equal to</option>
+              <option class="not-nullable" value="&gt;">greater than</option>
+              <option class="not-nullable" value="&gt;=">greater or equal to</option>
+              <option class="not-nullable" value="&lt;">less than</option>
+              <option class="not-nullable" value="&lt;=">less or equal to</option>
             </select>
           </div>
         </div>
