Fixing bugs affecting datetime and restrict modals; rank selection in add and view states

--- a/web/app/cenozo/modal-datetime.tpl.html
+++ b/web/app/cenozo/modal-datetime.tpl.html
@@ -97,8 +97,8 @@
               ng-click="local.select('today')">Today</button>
       <button ng-if="local.emptyAllowed"
               type="button"
-              class="btn btn-danger"
-              ng-click="local.select(null)">Clear</button>
+              class="btn btn-warning"
+              ng-click="local.select(null)">Empty</button>
     </div>
     <button type="button" class="btn btn-default" ng-click="local.cancel()">Cancel</button>
     <button type="submit" class="btn btn-primary">OK</button>
