--- a/web/app/root/home.tpl.html
+++ b/web/app/root/home.tpl.html
@@ -1,5 +1,9 @@
-<div class="inner-view-frame">
-  <div class="container-fluid">
+<div class="inner-view-frame" ng-switch="model.isLoading">
+  <div class="container-fluid" ng-switch-when="true">
+    <h3 class="text-primary text-center">Please wait while the application is starting</h3>
+    <div class="loader"></div>
+  </div>
+  <div class="container-fluid" ng-switch-when="false">
     <h3 class="text-primary">Welcome to {{ model.application.title }} version {{ model.application.version }}</h3>
     <div class="container-fluid">
       You are currently logged on as
