Clean-up and removal of "local" from modals where they aren't necessary

--- a/web/app/cenozo/modal-confirm.tpl.html
+++ b/web/app/cenozo/modal-confirm.tpl.html
@@ -1,10 +1,10 @@
-<form ng-submit="local.yes()" class="noselect">
+<form ng-submit="yes()" class="noselect">
   <div class="modal-header">
-    <h4 class="modal-title">{{ local.title }}</h4>
+    <h4 class="modal-title">{{ title }}</h4>
   </div>
-  <div class="modal-body">{{ local.message }}</div>
+  <div class="modal-body">{{ message }}</div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="local.no()">&#x2718 No</button>
+    <button type="button" class="btn btn-default" ng-click="no()">&#x2718 No</button>
     <button type="submit" class="btn btn-primary">&#x2714 Yes</button>
   </div>
 </form>
