--- a/web/app/cenozo/modal-password.tpl.html
+++ b/web/app/cenozo/modal-password.tpl.html
@@ -1,4 +1,4 @@
-<form ng-submit="local.ok()" novalidate name="form" class="noselect">
+<form ng-submit="ok()" novalidate name="form" class="noselect">
   <div class="modal-header">
     <h4 class="modal-title">Change Password</h4>
   </div>
@@ -7,7 +7,7 @@
       Fill out this form to change your password:
     </p>
     <hr />
-    <div ng-if="local.confirm"
+    <div ng-if="confirm"
          class="form-group"
          ng-class="{ 'has-feedback has-error': form.currentPass.$dirty && form.currentPass.$invalid }">
       <label for="currentPass" class="col-sm-4 control-label">Current Password</label>
@@ -15,9 +15,9 @@
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.currentPass.$dirty && form.currentPass.$invalid }">
           <input name="currentPass"
-                 ng-model="local.currentPass"
+                 ng-model="currentPass"
                  class="form-control"
-                 type="{{ local.showPasswords ? 'text' : 'password' }}" />
+                 type="{{ showPasswords ? 'text' : 'password' }}" />
         </div>
         <span ng-if="form.currentPass.$invalid && form.currentPass.$dirty">
           <span class="help-block" ng-if="form.currentPass.$error.required">Cannot be blank</span>
@@ -32,10 +32,10 @@
              ng-class="{ 'has-feedback has-error': form.newPass1.$dirty && form.newPass1.$invalid }">
           <input name="newPass1"
                  id="newPass1"
-                 ng-model="local.newPass1"
-                 ng-change="local.checkPasswordMatch()"
+                 ng-model="newPass1"
+                 ng-change="checkPasswordMatch()"
                  class="form-control"
-                 type="{{ local.showPasswords ? 'text' : 'password' }}"
+                 type="{{ showPasswords ? 'text' : 'password' }}"
                  ng-minlength="8"
                  required />
         </div>
@@ -54,10 +54,10 @@
              ng-class="{ 'has-feedback has-error': form.newPass2.$dirty && form.newPass2.$invalid }">
           <input name="newPass2"
                  id="newPass2"
-                 ng-model="local.newPass2"
-                 ng-change="local.checkPasswordMatch()"
+                 ng-model="newPass2"
+                 ng-change="checkPasswordMatch()"
                  class="form-control"
-                 type="{{ local.showPasswords ? 'text' : 'password' }}"
+                 type="{{ showPasswords ? 'text' : 'password' }}"
                  required />
         </div>
         <span ng-if="form.newPass2.$invalid && form.newPass2.$dirty">
@@ -68,14 +68,11 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-info pull-left" ng-click="local.toggleShowPasswords()">
-      {{ local.showPasswords ? 'Hide' : 'Show' }} Passwords
+    <button type="button" class="btn btn-info pull-left" ng-click="toggleShowPasswords()">
+      {{ showPasswords ? 'Hide' : 'Show' }} Passwords
     </button>
-    <button type="button" class="btn btn-default" ng-if="local.confirm" ng-click="local.cancel()">Cancel</button>
+    <button type="button" class="btn btn-default" ng-if="confirm" ng-click="cancel()">Cancel</button>
     <button type="submit" class="btn btn-primary"
-            ng-disabled="!local.newPass1 ||
-                         !local.newPass2 ||
-                         local.newPass1 != local.newPass2 ||
-                         form.$invalid">OK</button>
+            ng-disabled="!newPass1 || !newPass2 || newPass1 != newPass2 || form.$invalid">OK</button>
   </div>
 </form>
