--- a/web/app/cenozo/modal-account.tpl.html
+++ b/web/app/cenozo/modal-account.tpl.html
@@ -1,6 +1,6 @@
-<form ng-submit="local.ok()" novalidate name="form" class="noselect">
+<form ng-submit="ok()" novalidate name="form" class="noselect">
   <div class="modal-header">
-    <button type="button" class="close" ng-click="local.close()">&times;</button>
+    <button type="button" class="close" ng-click="close()">&times;</button>
     <h4 class="modal-title">Account Details</h4>
   </div>
   <div class="modal-body">
@@ -15,7 +15,7 @@
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.firstName.$invalid }">
           <input name="firstName"
-                 ng-model="local.firstName"
+                 ng-model="user.firstName"
                  class="form-control"
                  type="text"
                  required />
@@ -32,7 +32,7 @@
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.lastName.$invalid }">
           <input name="lastName"
-                 ng-model="local.lastName"
+                 ng-model="user.lastName"
                  class="form-control"
                  type="text"
                  required />
@@ -50,8 +50,8 @@
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.email.$invalid }">
           <input name="email"
-                 ng-model="local.email"
-                 ng-change="local.testEmailFormat()"
+                 ng-model="user.email"
+                 ng-change="testEmailFormat()"
                  class="form-control"
                  type="text"
                  required />
@@ -63,11 +63,11 @@
       </div>
     </div>
     <div class="form-group">
-      <label for="use12HourClock" class="col-sm-4 control-label"
+      <label for="use12hourClock" class="col-sm-4 control-label"
              tooltip="Whether to display times using the 12-hour clock (am/pm)">Use 12-Hour Clock</label>
       <div class="col-sm-8">
         <div class="input-group">
-          <select name="name" ng-model="local.use12HourClock" class="form-control" required>
+          <select name="use12hourClock" ng-model="use12hourClock" class="form-control" required>
             <option value="1">Yes</option>
             <option value="0">No</option>
           </select>
@@ -76,7 +76,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="local.cancel()">Cancel</button>
+    <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="submit" class="btn btn-primary"
             ng-disabled="form.email.$error.format || form.$invalid">OK</button>
   </div>
