--- a/web/app/cenozo/modal-message.tpl.html
+++ b/web/app/cenozo/modal-message.tpl.html
@@ -1,8 +1,8 @@
-<form ng-submit="local.close()" class="noselect">
+<form ng-submit="close()" class="noselect">
   <div class="modal-header">
-    <h4 class="modal-title">{{ local.title }}</h4>
+    <h4 class="modal-title">{{ title }}</h4>
   </div>
-  <div class="modal-body" ng-class="{ 'text-danger': local.error }">{{ local.message }}</div>
+  <div class="modal-body" ng-class="{ 'text-danger': error }">{{ message }}</div>
   <div class="modal-footer">
     <button type="submit" class="btn btn-primary">Close</button>
   </div>
