--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -1,4 +1,4 @@
-<form ng-submit="local.ok( local.restrictList )" class="noselect">
+<form ng-submit="ok( local.restrictList )" class="noselect">
   <div class="modal-header">
     <h4 class="modal-title">Restrict listing</h4>
   </div>
@@ -32,7 +32,7 @@
           </select>
         </div>
         <div class="col-sm-4">
-          <button type="button" class="btn btn-danger pull-right" ng-click="local.removeRestriction( $index )">
+          <button type="button" class="btn btn-danger pull-right" ng-click="removeRestriction( $index )">
             Remove Condition
           </button>
         </div>
@@ -66,7 +66,7 @@
           <div class="col-sm-2">
             <label class="btn btn-warning pull-right"
                    ng-model="local.emptyList[$index].state"
-                   ng-click="local.toggleEmpty( $index )"
+                   ng-click="toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
           </div>
         </div>
@@ -99,7 +99,7 @@
           <div class="col-sm-2">
             <label class="btn btn-warning pull-right"
                    ng-model="local.emptyList[$index].state"
-                   ng-click="local.toggleEmpty( $index )"
+                   ng-click="toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
           </div>
         </div>
@@ -135,7 +135,7 @@
           <div class="col-sm-2">
             <label class="btn btn-warning pull-right"
                    ng-model="local.emptyList[$index].state"
-                   ng-click="local.toggleEmpty( $index )"
+                   ng-click="toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
           </div>
         </div>
@@ -171,7 +171,7 @@
           <div class="col-sm-2">
             <label class="btn btn-warning pull-right"
                    ng-model="local.emptyList[$index].state"
-                   ng-click="local.toggleEmpty( $index )"
+                   ng-click="toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
           </div>
         </div>
@@ -201,7 +201,7 @@
                    ng-change="local.describeRestriction( $index )"
                    class="form-control"
                    type="text"
-                   ng-click="local.selectDatetime( $index )"
+                   ng-click="selectDatetime( $index )"
                    onkeydown="return false"
                    placeholder="{{ null === restrict.value ?
                                    '(empty)' :
@@ -214,7 +214,7 @@
           <div class="col-sm-2">
             <label class="btn btn-warning pull-right"
                    ng-model="local.emptyList[$index].state"
-                   ng-click="local.toggleEmpty( $index )"
+                   ng-click="toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
           </div>
         </div>
@@ -225,7 +225,7 @@
     <button type="button" class="btn btn-info pull-left"
             ng-click="local.addRestriction()">Add Condition</button>
     <button type="button" class="btn btn-default"
-            ng-click="local.preExisting ? local.remove() : local.cancel()">
+            ng-click="local.preExisting ? remove() : cancel()">
       {{ local.preExisting ? 'Remove' : 'Cancel' }}
     </button>
     <button type="submit" class="btn btn-primary">OK</button>
