--- a/web/app/cenozo/modal-site-role.tpl.html
+++ b/web/app/cenozo/modal-site-role.tpl.html
@@ -1,4 +1,4 @@
-<form ng-submit="local.ok()" novalidate name="form" class="noselect">
+<form ng-submit="ok()" novalidate name="form" class="noselect">
   <div class="modal-header">
     <h4 class="modal-title">Select a Site and Role</h4>
   </div>
@@ -11,10 +11,10 @@
       <label for="timezone" class="col-sm-3 control-label">Site</label>
       <div class="col-sm-9">
         <select
-          name="site_id"
-          ng-options="site.id as site.name for site in local.siteList"
-          ng-model="local.site_id"
-          ng-change="local.refreshRoleList()"
+          name="siteId"
+          ng-options="site.id as site.name for site in siteList"
+          ng-model="siteId"
+          ng-change="refreshRoleList()"
           class="form-control"></select>
       </div>
     </div>
@@ -22,15 +22,15 @@
       <label for="timezone" class="col-sm-3 control-label">Role</label>
       <div class="col-sm-9">
         <select
-          name="role_id"
-          ng-options="role.id as role.name for role in local.roleList"
-          ng-model="local.role_id"
+          name="roleId"
+          ng-options="role.id as role.name for role in roleList"
+          ng-model="roleId"
           class="form-control"></select>
       </div>
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="local.cancel()">Cancel</button>
+    <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="submit" class="btn btn-primary">OK</button>
   </div>
 </form>
