--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -4,7 +4,7 @@
   </div>
   <form name="form" class="form-horizontal" novalidate>
     <div class="form-body">
-      <ng-form ng-repeat="input in inputArray"
+      <ng-form ng-repeat="input in dataArray"
                name="innerForm">
         <div class="form-group"
              ng-if="'identifier' != input.type"
