--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -32,7 +32,7 @@
           </select>
         </div>
         <div class="col-sm-4">
-          <button type="button" class="btn btn-danger pull-right" ng-click="removeRestriction( $index )">
+          <button type="button" class="btn btn-danger pull-right" ng-click="local.removeRestriction( $index )">
             Remove Condition
           </button>
         </div>
@@ -66,7 +66,7 @@
           <div class="col-sm-2">
             <label class="btn btn-warning pull-right"
                    ng-model="local.emptyList[$index].state"
-                   ng-click="toggleEmpty( $index )"
+                   ng-click="local.toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
           </div>
         </div>
@@ -99,7 +99,7 @@
           <div class="col-sm-2">
             <label class="btn btn-warning pull-right"
                    ng-model="local.emptyList[$index].state"
-                   ng-click="toggleEmpty( $index )"
+                   ng-click="local.toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
           </div>
         </div>
@@ -135,7 +135,7 @@
           <div class="col-sm-2">
             <label class="btn btn-warning pull-right"
                    ng-model="local.emptyList[$index].state"
-                   ng-click="toggleEmpty( $index )"
+                   ng-click="local.toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
           </div>
         </div>
@@ -171,7 +171,7 @@
           <div class="col-sm-2">
             <label class="btn btn-warning pull-right"
                    ng-model="local.emptyList[$index].state"
-                   ng-click="toggleEmpty( $index )"
+                   ng-click="local.toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
           </div>
         </div>
@@ -214,7 +214,7 @@
           <div class="col-sm-2">
             <label class="btn btn-warning pull-right"
                    ng-model="local.emptyList[$index].state"
-                   ng-click="toggleEmpty( $index )"
+                   ng-click="local.toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
           </div>
         </div>
