Working on qnaire/phase/survey modules

--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -5,7 +5,7 @@
          ng-if="!model.listModel.isLoading"
          ng-click="refresh()"
          tooltip="Click to refresh data"
-         tooltip-placement="right"></i>
+         tooltip-placement="left"></i>
       {{ heading }}
     </h4>
   </div>
